Fix scroll to top button flickering when elements fade in Add more media to the about-me page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,14 +11,19 @@
 }
 
 .sidenav-option {
-width: 100%;
-font-size: 24px;
-margin-bottom: 5px;
-}
+  width: 100%;
+  font-size: 26px;
+  margin-bottom: 5px;
+  }
 
 .scroll-to-top {
-position: fixed; /* Fixed/sticky position */
-bottom: 20px; /* Place the button at the bottom of the page */
-right: 20px; /* Place the button 30px from the right */
-//z-index: 10; /* Make sure it does not overlap */
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 10; // keep the icon on top of other elements as they fade into the page
+
+  transition: .1s opacity ease-in-out;
+  &.hidden {
+    opacity: 0;
+  }
 }
